Unify orange color used.

--- a/client/static/client/css/create_program.css
+++ b/client/static/client/css/create_program.css
@@ -15,17 +15,17 @@ body {
 .form-control {
     border-radius: 10px !important;
     padding: 12px 20px;
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     transition: all 0.3s ease-in-out;
 }
 
 .form-control:focus {
-    border-color:  #ff440f;
+    border-color:  #F24505;
     box-shadow: 0 0 5px rgba(81, 182, 255, 0.5);
 }
 
 .form-check-input {
-    accent-color: #ff440f;
+    accent-color: #F24505;
     width: 22px;
     height: 22px;
     margin-right: 10px;
@@ -51,37 +51,47 @@ body {
 
 
 .btn-primary {
-    background-color: #ff440f;
-    border-color: #ff440f;
-    border-radius: 50px;
-    padding: 12px 25px;
-    font-size: 16px;
+    padding: 12px 18px;
+    background: #F24505;
+    color: white;
+    font-family: Manrope;
+    border-radius: 25px;
+    font-size: 14px;
     font-weight: bold;
-    transition: background 0.3s ease-in-out, transform 0.2s;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+    border: none;
 }
 
 .btn-primary:hover {
-    background-color: #cc370d;
-    transform: translateY(-2px);
+    background: #D43802;
+    color: white;
 }
 
 .btn-secondary {
-    background-color: #6c757d;
-    border-radius: 50px;
-    padding: 12px 25px;
-    font-size: 16px;
-    transition: background 0.3s ease-in-out, transform 0.2s;
+    padding: 12px 18px;
+    background: #ddd;
+    color: black;
+    border-radius: 25px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+    border: none;
 }
 
 .btn-secondary:hover {
-    background-color: #5a6268;
-    transform: translateY(-2px);
+    background: #bbb;
 }
 
 
 .create_program h2 {
     font-weight: bold;
-    color: #ff440f;
+    color: #000000;
     text-align: center;
     margin-bottom: 20px;
     font-size: 36px;
@@ -90,7 +100,7 @@ body {
 .card {
     border-radius: 20px;
     background-color: #f9f9f9;
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -99,7 +109,7 @@ body {
     background: #f9f9f9;
     border-radius: 10px;
     padding: 10px;
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     min-height: 50px;
 }
 
@@ -108,7 +118,7 @@ body {
     display: flex;
     align-items: center;
     padding: 12px;
-    border: 1px solid #ff440f;
+    border: 1px solid #F24505;
     background: white;
     border-radius: 50px;
     margin-bottom: 8px;
@@ -124,14 +134,14 @@ body {
 
 .sortable-ghost {
     background-color: rgba(255, 68, 15, 0.2) !important;
-    border: 1px dashed #ff440f;
+    border: 1px dashed #F24505;
 }
 
 
 .drag-handle {
     cursor: grab;
     font-size: 18px;
-    color: #ff440f;
+    color: #F24505;
 }
 
 textarea.form-control {
@@ -143,7 +153,7 @@ textarea.form-control {
 }
 
 .module-box {
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     border-radius: 10px;
     padding: 15px;
     background-color: #fff;
@@ -170,8 +180,8 @@ textarea.form-control {
 }
 
 .filterButton {
-    background-color: #ff440f;
-    border-color: #ff440f;
+    background-color: #F24505;
+    border-color: #F24505;
     color: white;
     transition: background-color 0.3s, border-color 0.3s;
 }
@@ -186,12 +196,12 @@ textarea.form-control {
 }
 
 .category-box{
-    border:2px solid #ff440f;
+    border:2px solid #F24505;
     border-radius: 10px;
 }
 
 .category-box input[type="text"] {
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     border-radius: 10px;
     padding: 12px 15px;
     width: 100%;
@@ -199,7 +209,7 @@ textarea.form-control {
 }
 
 .category-box input[type="text"]:focus {
-    border-color: #cc370d;
+    border-color: #D43802;
     box-shadow: 0 0 5px rgba(255, 68, 15, 0.5);
 }
 
@@ -212,7 +222,7 @@ textarea.form-control {
 }
 
 .category-box input[name="new_category"]::placeholder {
-    color: #ff440f !important;
+    color: #F24505 !important;
     opacity: 1;
 }
 
