--- a/client/static/client/css/modules_management.css
+++ b/client/static/client/css/modules_management.css
@@ -89,7 +89,7 @@ body {
 .color1 { background-color: #CEE7F2; }
 .color2 { background-color: #44778d; }
 .color3 { background-color: #a7d4e8; }
-.color4 { background-color: #ff5733; }
+.color4 { background-color: #F24505; }
 .color5 { background-color: #3498DB; }
 .color6 { background-color: #CEE7F2; }
 
