--- a/users/static/users/css/contact_success.css
+++ b/users/static/users/css/contact_success.css
@@ -38,7 +38,7 @@
 
 .success_left_title h2 {
     font-weight: 600;
-    color: #ff440f;
+    color: #F24505;
     font-size: 30px;
     margin-bottom: 10px;
     text-align: center;
