--- a/users/static/users/css/personalized_plan.css
+++ b/users/static/users/css/personalized_plan.css
@@ -155,7 +155,7 @@ button, .view-program-button {
 }
 
 button:hover, .view-program-button:hover {
-    background-color: #d63d04;
+    background-color: #D43802;
 }
 
 .enroll-button.enrolled {
