--- a/users/static/users/css/profile_style.css
+++ b/users/static/users/css/profile_style.css
@@ -184,7 +184,7 @@ html, body {
 .partition-line {
     width: 100%;
     height: 3px;
-    background-color: #C84545;
+    background-color: #D43802;
     margin: 15px 0;
 }
 
