--- a/client/static/client/css/create_category.css
+++ b/client/static/client/css/create_category.css
@@ -15,17 +15,17 @@ body {
 .form-control {
     border-radius: 10px !important;
     padding: 12px 20px;
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     transition: all 0.3s ease-in-out;
 }
 
 .form-control:focus {
-    border-color: #ff440f;
+    border-color: #F24505;
     box-shadow: 0 0 5px rgba(81, 182, 255, 0.5);
 }
 
 .form-check-input {
-    accent-color: #ff440f;
+    accent-color: #F24505;
     width: 22px;
     height: 22px;
     margin-right: 10px;
@@ -97,7 +97,7 @@ body {
 .card {
     border-radius: 20px;
     background-color: #f9f9f9;
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -105,7 +105,7 @@ body {
     background: #f9f9f9;
     border-radius: 10px;
     padding: 10px;
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     min-height: 50px;
 }
 
@@ -113,7 +113,7 @@ body {
     display: flex;
     align-items: center;
     padding: 12px;
-    border: 1px solid #ff440f;
+    border: 1px solid #F24505;
     background: white;
     border-radius: 50px;
     margin-bottom: 8px;
@@ -127,13 +127,13 @@ body {
 
 .sortable-ghost {
     background-color: rgba(255, 68, 15, 0.2) !important;
-    border: 1px dashed #ff440f;
+    border: 1px dashed #F24505;
 }
 
 .drag-handle {
     cursor: grab;
     font-size: 18px;
-    color: #ff440f;
+    color: #F24505;
 }
 
 textarea.form-control {
@@ -145,7 +145,7 @@ textarea.form-control {
 }
 
 .module-box {
-    border: 2px solid #ff440f;
+    border: 2px solid #F24505;
     border-radius: 10px;
     padding: 15px;
     background-color: #fff;
