--- a/client/static/client/css/edit_questionnaire.css
+++ b/client/static/client/css/edit_questionnaire.css
@@ -129,7 +129,7 @@ body {
 
 /* Delete Buttons */
 .delete-btn {
-    background-color: #e74c3c;
+    background-color: #F24505;
     color: white;
     padding: 6px 12px;
     font-size: 14px;
@@ -142,7 +142,7 @@ body {
 }
 
 .delete-btn:hover {
-    background: #c0392b;
+    background: #D43802;
     transform: scale(1.05);
 }
 
