--- a/client/static/client/css/view_questionnaire.css
+++ b/client/static/client/css/view_questionnaire.css
@@ -24,37 +24,45 @@ body {
 
 /* Edit Button */
 .edit-btn {
-    background-color: #f39c12;
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
+    font-family: 'Manrope';
     font-size: 16px;
-    font-weight: bold;
-    border: 2px solid #f39c12;
-    border-radius: 20px;
-    transition: background 0.3s, transform 0.2s;
+  padding: 10px 14px;
+  background-color: #F24505;
+  color: white;
+  text-decoration: none;
+  border-radius: 25px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  border: 2px solid #ffffff;
 }
 
 .edit-btn:hover {
-    /* background: rgba(0, 0, 0, 0.1); */
-    transform: scale(1.05);
+    background: #D43802;
+  color: white;
 }
 
 .delete-btn {
-    background-color: red;
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
+    font-family: 'Manrope';
     font-size: 16px;
-    font-weight: bold;
-    border: 2px solid red;
-    border-radius: 20px;
-    transition: background 0.3s, transform 0.2s;
+  padding: 10px 14px;
+  background-color: #F24505;
+  color: white;
+  text-decoration: none;
+  border-radius: 25px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  border: 2px solid #ffffff;
 }
 
 .delete-btn:hover {
-    /* background: rgba(0, 0, 0, 0.1); */
-    transform: scale(1.05);
+    background: #D43802;
+  color: white;
 }
 
 /* Description Box */
@@ -121,8 +129,8 @@ body {
 }
 
 .back-btn:hover {
-    background: #F24505; /* Darker grey on hover */
-    transform: scale(1.05);
+    background: #D43802;
+    color: white;
 }
 .action-buttons {
     display: flex;
