--- a/users/static/users/css/exercise_detail.css
+++ b/users/static/users/css/exercise_detail.css
@@ -65,7 +65,7 @@
     margin-top: 20px;
 }
 .submit-container button {
-    background-color: #FF6600; 
+    background-color: #F24505; 
     border: none;
     padding: 12px 20px;
     color: #fff;
