--- a/users/static/users/css/verification_email.css
+++ b/users/static/users/css/verification_email.css
@@ -25,7 +25,7 @@
     height: auto;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
     text-align: center;
-    background-color: #ff5733;
+    background-color: #F24505;
     display: flex;
     flex-direction: column;
     justify-content: center;
