Unify orange color used.

--- a/users/static/users/css/view_program.css
+++ b/users/static/users/css/view_program.css
@@ -346,7 +346,7 @@ body {
     margin-top: auto;
   }
   .view-module-button:hover {
-    background: #F24505;
+    background: #D43802;
     color: white;
   }
   
