--- a/users/templates/users/exercise_detail.html
+++ b/users/templates/users/exercise_detail.html
@@ -10,6 +10,7 @@
 
 {% block content %}
 <div class="exercise-title">
+    <button class="back-btn" onclick="window.history.back();">← Back</button>
     <h1>{{ exercise.title }}</h1>
    
 
