Fix rec modules and programs cards

--- a/users/static/users/css/navbar.css
+++ b/users/static/users/css/navbar.css
@@ -72,6 +72,13 @@ body {
     color: white;
 }
 
+/* Styling for active links */
+.nav-links a.active {
+    font-weight: bold;
+    background-color: #F24505;
+    border-radius: 8px; /* Soft rounded corners */
+}
+
 
 .nav-links a:hover {
     width: 225px;
